--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Poppins -->
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
@@ -14,6 +16,7 @@
   </head>
 
   <body>
+    <!-- Navigation and Hero Section -->
     <header>
       <nav>
         <img src="images/logo.svg" alt="logo" />
@@ -43,11 +46,13 @@
       </section>
     </header>
 
-    <!-- Zero one -->
+    <!-- First Page Break -->
     <div class="zero-one-container">
       <div class="vl"></div>
       <span>01</span>
     </div>
+
+    <!-- Gallery -->
 
     <main>
       <div class="gallery-image-container">
@@ -56,6 +61,8 @@
         <img src="images/Gallery-image3.jpg" alt="man" />
         <img src="images/Gallery-image4.jpg" alt="man-smilling" />
       </div>
+
+      <!-- Main Content -->
 
       <div class="main-content">
         <div>
@@ -73,10 +80,13 @@
       </div>
     </main>
 
+    <!-- Second Page Break -->
     <div class="zero-two-container">
       <div class="vl"></div>
       <span>02</span>
     </div>
+
+    <!-- Footer -->
 
     <footer>
       <div class="footer-item">
