--- a/index.html
+++ b/index.html
@@ -47,9 +47,19 @@
     </header>
 
     <!-- First Page Break -->
+
+    <!-- Fawzaan's -->
     <div class="zero-one-container">
       <div class="vl"></div>
       <span>01</span>
+    </div>
+
+    <!-- Lanre's -->
+    <div class="pendulum">
+      <div class="vertical-line"></div>
+      <div class="zero-one-wrapper">
+        <span class="zero-one">01</span>
+      </div>
     </div>
 
     <!-- Gallery -->
