--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
       <span>01</span>
     </div>
 
-    <!-- Lanre's -->
+    <!-- Lanre's
     <div class="pendulum">
       <div class="vertical-line"></div>
       <div class="zero-one-wrapper">
         <span class="zero-one">01</span>
       </div>
-    </div>
+    </div> -->
 
     <!-- Gallery -->
 
