--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <img src="images/logo.svg" alt="logo" />
       </nav>
       <section class="hero-section">
+        <!-- <div class="hero-background">
+          <div class="hero-image-left"></div>
+          <div class="hero-image-right"></div>
+        </div> -->
+
         <div>
           <img src="images/meet-image2.png" alt="group-image2" />
         </div>
@@ -45,13 +50,23 @@
         </div>
       </section>
     </header>
+    <!-- <div class="hero-buttons-mobile">
+      <button>Download v1.3</button>
 
+      <button>What is it</button>
+    </div> -->
     <!-- First Page Break -->
 
     <!-- Fawzaan's -->
     <div class="zero-one-container">
       <div class="vl"></div>
       <span>01</span>
+    </div>
+
+    <div class="zero-one-container-mobile">
+      <div class="hl"></div>
+      <span>01</span>
+      <div class="hl"></div>
     </div>
 
     <!-- Lanre's
@@ -82,9 +97,9 @@
             one place
           </h1>
           <p>
-            Send messages, share files, show your screen, and record<br />your
-            meetings all in one workspace. Control who can join <br />with
-            invite-team access, data encryption, and data export.
+            Send messages, share files, show your screen, and record your
+            meetings all in one workspace. Control who can join with invite-team
+            access, data encryption, and data export.
           </p>
         </div>
       </div>
@@ -94,6 +109,12 @@
     <div class="zero-two-container">
       <div class="vl"></div>
       <span>02</span>
+    </div>
+
+    <div class="zero-two-container-mobile">
+      <div class="hl"></div>
+      <span>02</span>
+      <div class="hl"></div>
     </div>
 
     <!-- Footer -->
